--- a/Xamarin.Forms.TikTok.iOS/Xamarin.Forms.TikTok.iOS.csproj
+++ b/Xamarin.Forms.TikTok.iOS/Xamarin.Forms.TikTok.iOS.csproj
@@ -65,6 +65,7 @@
   <ItemGroup>
     <Compile Include="Main.cs" />
     <Compile Include="AppDelegate.cs" />
+    <Compile Include="Setup.cs" />
     <None Include="Entitlements.plist" />
     <None Include="Info.plist" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -126,6 +127,7 @@
     <PackageReference Include="CardsView">
       <Version>2.8.0</Version>
     </PackageReference>
+    <PackageReference Include="MvvmCross.Forms" Version="8.0.2" />
     <PackageReference Include="Xamarin.CommunityToolkit">
       <Version>1.3.1</Version>
     </PackageReference>
@@ -134,6 +136,10 @@
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
+    <ProjectReference Include="..\Xamarin.Forms.TikTok.Core\Xamarin.Forms.TikTok.Core.csproj">
+      <Project>{e8b077be-4d17-4e82-8485-bc63d9d00738}</Project>
+      <Name>Xamarin.Forms.TikTok.Core</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Xamarin.Forms.TikTok\Xamarin.Forms.TikTok.csproj">
       <Project>{2A8E51A2-06F1-455F-9D1C-31C121E0591F}</Project>
       <Name>Xamarin.Forms.TikTok</Name>
