--- a/Xamarin.Forms.TikTok/Xamarin.Forms.TikTok.csproj
+++ b/Xamarin.Forms.TikTok/Xamarin.Forms.TikTok.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
     <ProduceReferenceAssembly>true</ProduceReferenceAssembly>
   </PropertyGroup>
 
@@ -36,6 +36,7 @@
   <ItemGroup>
     <PackageReference Include="CardsView" Version="2.8.0" />
     <PackageReference Include="Com.Airbnb.Xamarin.Forms.Lottie" Version="4.0.11" />
+    <PackageReference Include="MvvmCross.Forms" Version="8.0.2" />
     <PackageReference Include="Xamarin.CommunityToolkit" Version="1.3.1" />
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2291" />
     <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
@@ -72,5 +73,9 @@
     <EmbeddedResource Update="Views\RecordView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Xamarin.Forms.TikTok.Core\Xamarin.Forms.TikTok.Core.csproj" />
   </ItemGroup>
 </Project>
