--- a/Xamarin.Forms.TikTok.iOS/Xamarin.Forms.TikTok.iOS.csproj
+++ b/Xamarin.Forms.TikTok.iOS/Xamarin.Forms.TikTok.iOS.csproj
@@ -128,8 +128,10 @@
       <Version>2.8.0</Version>
     </PackageReference>
     <PackageReference Include="MvvmCross.Forms" Version="8.0.2" />
+    <PackageReference Include="Serilog.Extensions.Logging" Version="3.1.0" />
+    <PackageReference Include="Serilog.Sinks.Xamarin" Version="0.2.0.64" />
     <PackageReference Include="Xamarin.CommunityToolkit">
-      <Version>2.0.1</Version>
+      <Version>1.3.1</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2337" />
     <PackageReference Include="Xamarin.Essentials" Version="1.7.1" />
