--- a/Xamarin.Forms.TikTok.Android/Properties/AndroidManifest.xml
+++ b/Xamarin.Forms.TikTok.Android/Properties/AndroidManifest.xml
@@ -3,4 +3,7 @@
 	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="30" />
 	<application android:label="Xamarin.Forms.TikTok.Android" android:theme="@style/MainTheme"></application>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+	<uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" />
 </manifest>
