--- a/Xamarin.Forms.TikTok.Android/Xamarin.Forms.TikTok.Android.csproj
+++ b/Xamarin.Forms.TikTok.Android/Xamarin.Forms.TikTok.Android.csproj
@@ -62,6 +62,9 @@
     <PackageReference Include="CardsView">
       <Version>2.8.0</Version>
     </PackageReference>
+    <PackageReference Include="Com.Airbnb.Xamarin.Forms.Lottie">
+      <Version>4.1.0</Version>
+    </PackageReference>
     <PackageReference Include="MvvmCross.DroidX.Material">
       <Version>8.0.2</Version>
     </PackageReference>
@@ -76,6 +79,9 @@
     </PackageReference>
     <PackageReference Include="Serilog.Sinks.Xamarin">
       <Version>0.2.0.64</Version>
+    </PackageReference>
+    <PackageReference Include="VideoLAN.LibVLC.Android">
+      <Version>3.2.0.1</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.CommunityToolkit">
       <Version>1.3.1</Version>
@@ -94,6 +100,9 @@
     <Compile Include="Views\SplashActivity.cs" />
   </ItemGroup>
   <ItemGroup>
+    <AndroidAsset Include="Assets\FontAwesome5Brands.otf" />
+    <AndroidAsset Include="Assets\FontAwesome5Regular.otf" />
+    <AndroidAsset Include="Assets\FontAwesome5Solid.otf" />
     <AndroidAsset Include="Assets\tiktokfont.ttf" />
     <None Include="Resources\AboutResources.txt" />
     <None Include="Assets\AboutAssets.txt" />
@@ -550,6 +559,12 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="proguard.cfg" />
+    <ProguardConfiguration Include="r8.cfg" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidAsset Include="Assets\loading.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </AndroidAsset>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
