--- a/Xamarin.Forms.TikTok.Android/proguard.cfg
+++ b/Xamarin.Forms.TikTok.Android/proguard.cfg
@@ -19,3 +19,6 @@
 -keep class android.support.design.** { *; }
 -keep interface android.support.design.** { *; }
 -keep public class android.support.design.R$* { *; }
+
+-keep class org.videolan.** { *; }
+-dontwarn org.videolan.**
