--- a/Xamarin.Forms.TikTok.iOS/Xamarin.Forms.TikTok.iOS.csproj
+++ b/Xamarin.Forms.TikTok.iOS/Xamarin.Forms.TikTok.iOS.csproj
@@ -127,9 +127,11 @@
     <PackageReference Include="CardsView">
       <Version>2.8.0</Version>
     </PackageReference>
+    <PackageReference Include="Com.Airbnb.Xamarin.Forms.Lottie" Version="4.1.0" />
     <PackageReference Include="MvvmCross.Forms" Version="8.0.2" />
     <PackageReference Include="Serilog.Extensions.Logging" Version="3.1.0" />
     <PackageReference Include="Serilog.Sinks.Xamarin" Version="0.2.0.64" />
+    <PackageReference Include="VideoLAN.LibVLC.iOS" Version="3.3.17" />
     <PackageReference Include="Xamarin.CommunityToolkit">
       <Version>1.3.1</Version>
     </PackageReference>
