--- a/Xamarin.Forms.TikTok/Xamarin.Forms.TikTok.csproj
+++ b/Xamarin.Forms.TikTok/Xamarin.Forms.TikTok.csproj
@@ -36,8 +36,9 @@
     <PackageReference Include="LibVLCSharp.Forms" Version="3.6.6" />
     <PackageReference Include="MvvmCross.Forms" Version="8.0.2" />
     <PackageReference Include="Xamarin.CommunityToolkit" Version="1.3.1" />
+    <PackageReference Include="Xamarin.Essentials.Interfaces" Version="1.7.1" />
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2291" />
-    <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
+    <PackageReference Include="Xamarin.Essentials" Version="1.7.1" />
   </ItemGroup>
 
   <ItemGroup>
